--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,27 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Page Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" media="screen" href="index.css" />
+    <script src="main.js"></script>
+  
+</head>
+<body>
+    <nav>
+        <span class = "up_retangle"></span>
+        <span class = "down_retangle"></span>
+         <span class="dot"></span>
+    </nav>
+    <div class ="dotted" >
+        <span class = "tan_retangle"></span>
+    </div>
+    <div class = "hello_friends">
+        <div class = "hefri"><h1>HELLO</h1>
+         <h1>FRIENDS</h1></div>
+    </div>
+    
+</body>
+</html>
